<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Ding Dong: Condom</string>

    <string name="request_condom_text">To place a condom order, please carefully input your dorm name, delivery type,
        and delivery details. Then click the button below!
     </string>
    <string name="request_details">Condoms will be placed under the specified room number door for
        Room deliveries and to a designated drop box in on your specified floor\'s lounge for Lounge deliveries.</string>
    <string name="request_condom_button_text">I\'m Feeling Lucky!</string>
    <string name="request_condom_dorm_name">Dorm Name:</string>
    <string name="request_condom_dorm_room">Dorm Room:</string>
    <string name="request_condom_delivery_type">Where do you want the condom delivered?</string>
    <string name="request_condom_delivery_type_to_room">To My Room</string>
    <string name="request_condom_delivery_type_to_lounge">To My Lounge</string>
    <string name="request_condom_delivery_type_to_dorm">To My Dorm</string>
    <string-array name="dorms_array">
        <item>AP</item>
        <item>DK</item>
        <item>Kohlberg</item>
        <item>Lodges</item>
        <item>Mertz</item>
        <item>Science Center</item>
        <item>Wharton AB</item>
        <item>Wharton CD</item>
        <item>Wharton EF</item>
        <item>Willets North</item>
        <item>Willets South</item>
        <item>Worth</item>
    </string-array>
    <string name="register_about">Thanks for downloading Ding Dong: Condom!\n\nWith this app you now
        have access to our\nfree, on-demand, on-campus\ncondom delivery service.</string>

    <string name="project_purpose">\tWe built this app for our Computer Science Senior Conference project.
        This year\'s topic is Mobile Health and we wanted our project to be about something that\'s
        relevant for most of us - sex in college. We want to research whether or not this service
        improves access to condoms on campus and individuals\' sexual practices and health.

        \n\tThis app works by allowing you to place an order during the hours that the app is open
        this following week. In order to protect anonymity, we are not asking for or storing any
        personally identifiable data (eg. phone numbers, emails). You register below with the
        provided token. We are only collecting data from the orders placed and responses to our
        day-after surveys.
        \n\tBest Winnie, Awjin, Daniel</string>
    <string name="service_how_to">
        \tTo use this service you must specify whether you want
        it delivered to your room or to your lounge. In response, one of us will drop off
        an envelope containing 3 condoms to your designated destination within 15 minutes.
        Limit 1 order per night. Please use responsibly.</string>

    <string name="action_settings">Settings</string>
    <string name="survey_title">Morning After Survey</string>

    <string name="menu_service">\tTo use this service you must provide us with your building
        name, delivery type, and delivery details via our delivery request form.
        In response, one of us will drop off
        an envelope containing 3 condoms to your designated destination within 15 minutes.
        Condoms will be placed under the specified room number door for
        Room deliveries and to a designated drop box on your specified floor\'s lounge for Lounge deliveries.
        \n\tLimit 1 order per night. Please use responsibly.</string>


    <string name="menu_about_us">\tWe built this app for our Computer Science Senior Conference project.
        This year\'s topic is Mobile Health and we wanted our project to be about something that\'s
        relevant for most of us - sex in college. We want to research whether or not this service
        improves access to condoms on campus and individuals\' sexual practices and health.

        \n\tThis app works by allowing you to place an order during the hours that the app is open
        this following week. In order to protect anonymity, we are not asking for or storing any
        personally identifiable data (eg. phone numbers, emails). We are only collecting data from
        the orders placed and responses to our
        day-after surveys.

        \n\tThanks for your help! - Winnie, Awjin, Daniel</string>

    <string name="survey_explanation">Thank you very much for using our service! In order to better understand how useful this service was to you
    and whether it is worth developing further, we would ask you to take a few moments to fill out the below survey.
    As always, it is completely anonymous and will only be used for evaluation in terms of our research project.\n
    Thanks again,\nAwjin, Winnie and Daniel</string>

    <string name="open_for_business_text">We are currently not delivering.</string>

    <string name="condom_guide_link"></string>
</resources>
