<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              tools:context=".RequestCondomActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150px"
        android:background="#5ba4e5">

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center"
            android:src="@drawable/logo_2"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#ffffff"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

    <TextView
        android:text="@string/request_condom_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/request_condom_text"
        android:textColor="#000000"
        android:gravity="center"
        android:textSize="15sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="10dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/request_condom_dorm_name"
                android:layout_margin="5dp"
                android:textColor="#000000"/>

            <Spinner
                android:id="@+id/dorms_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/request_condom_delivery_type"
                android:layout_margin="2dp"
                android:textColor="#000000"/>

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:id="@+id/request_condom_delivery_type_radio_group">

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="#000000"
                    android:onClick="onRadioButtonClicked"
                    android:id="@+id/request_condom_delivery_type_radio_to_room"
                    android:text="@string/request_condom_delivery_type_to_room"/>

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="#000000"
                    android:onClick="onRadioButtonClicked"
                    android:id="@+id/request_condom_delivery_type_radio_to_lounge"
                    android:text="@string/request_condom_delivery_type_to_lounge"/>

            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Floor/Room Number:"
                android:layout_margin="2dp"
                android:textColor="#000000"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="80px"
                android:layout_margin="5px"
                android:text="###"
                android:id="@+id/dorm_number"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="bottom">

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/request_condom_button_text"
                android:id="@+id/request_condom_button"
                android:layout_gravity="bottom"
                android:textColor="#ffffff"
                android:background="@drawable/btn_green"
                android:gravity="center"
                />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>
